...
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/single_fragment_toolbar"
                style="@style/ToolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/main_toolbar_color"
                android:elevation="4dp"
                android:theme="@style/ToolbarTheme"
...
                    app:tint="?attr/main_toolbar_title_color" />

            </android.support.v7.widget.Toolbar>
        </FrameLayout>

        <org.wikipedia.main.MainDrawerView
            android:id="@+id/navigation_drawer_view"
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?attr/paper_color" />
    </org.wikipedia.views.WikiDrawerLayout>
</LinearLayout>
