...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/fragment_page"
            tools:layout="@layout/fragment_page" />

        <FrameLayout
            android:id="@+id/page_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/page_toolbar_color"
            android:elevation="4dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/page_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/PageToolbarTheme"
                app:navigationIcon="@drawable/ic_icon_w_back"
                app:titleTextColor="?attr/page_toolbar_icon_color">

...
