...
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_play_stop_button">Play or Stop WikiListeny</string>
    <string name="menu_page_skip_button">Skip section in WikiListeny</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>

    <!-- Long press menu -->
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>

    <!-- Toolbar menu items -->
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_define">Define</string>
...
    <string name="preference_title_prefer_offline_content">Prefer offline content</string>
    <string name="preference_summary_prefer_offline_content">Save data usage by loading articles that are available offline rather than always loading the latest version of an article</string>

    <!-- Crash reporter -->
    <string name="crash_report_dialog_title">Sorry, app crashed last time</string>
    <string name="crash_report_dialog_text">Would you like to send a crash report to HockeyApp / a third-party service provider so that Wikimedia can review your crash and fix the bug that caused it?</string>
    <string name="crash_report_dialog_dont_send_button">Skip</string>
    <string name="crash_report_dialog_always_send_button">Always send</string>
    <string name="crash_report_dialog_send_button">Send</string>
    <string name="crash_report_activity_title">Application error</string>
    <string name="crash_report_relaunch_or_quit">We\'re sorry, the Wikipedia app has experienced an error and was terminated.\n\nWould you like to start over or quit?</string>
    <string name="crash_report_relaunch">Start over</string>
    <string name="crash_report_quit">Quit</string>
...
